--- a/html/about-us.html
+++ b/html/about-us.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--header: logo, navbar y menú desplegable-->
-    <header>
+    <header id="header">
         <div class="logo">
             <!-- Logo en el medio -->
             <img src="./../img/logo-limpio.png" alt="Logo">
@@ -31,13 +31,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./about-us.html">About Us</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="./share-your-trades.html">Share Your Trades</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./share-your-blog.html">Share Your Blogs</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./learn.html">Learn The Basics</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./contact-us.html">Contact Us</a>
@@ -52,12 +52,11 @@
               </div>
             </div>
             <!--menú desplegable, accordion sacado de bootstrap, no se me ocurrió otro modo para que esté en la misma línea del navbar que poniéndolo dentro del mismo, con grid no me funcionó y no se me ocurrió otra manera de hacer un menú desplegable usando únicamente html y css-->
-            <!--No es necesario, pero me parece que sería mejor que los accordions estén en alineados horizontalmente en vez de verticalmente-->
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Trading books
+                      Extra help!
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -67,35 +66,27 @@
                     </div>
                   </div>
                 </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Trading chanels
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <!--Dejo el lorem como ejemplo mientras encuentro links buenos-->
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolorum, assumenda aliquam fugiat fuga illo, facilis aspernatur iure eius id optio quibusdam dolores tenetur ullam, ducimus modi libero laboriosam dolor!</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Trading podcasts
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <!--Dejo el lorem como ejemplo mientras encuentro links buenos-->
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolorum, assumenda aliquam fugiat fuga illo, facilis aspernatur iure eius id optio quibusdam dolores tenetur ullam, ducimus modi libero laboriosam dolor!</p>
-                    </div>
-                  </div>
-                </div>
             </div>
         </nav>
     </header>
+    <div class="row">
+        <div class="col">
+            Welcome to our trading community, where learning is free, and sharing is empowering. Our platform is dedicated to providing a space for individuals to freely exchange trades, analyses, blogs, podcasts, and channels. In the challenging world of trading, we understand the difficulties—both emotional and technical—faced by enthusiasts and professionals alike. Our mission is to create a supportive environment where members can collaborate, learn, and protect themselves from potential scams. We believe in the power of collective wisdom, and our platform is designed to facilitate the sharing of knowledge to help each other grow. Join us on this journey, as we strive to make the trading profession more accessible, transparent, and secure for everyone.
+        </div>
+        <div class="col">
+            While everyone is welcome and this is a safe place to share your doubts and help others, everyone must stick our<a href="./our-policy.html"><strong>Community Policies</strong></a>, and by staying at this place, you are aware that<a href="./disclaimer.html"><strong>you are the only one responsible</strong></a>of the Trading decisions you take.
+            <div><p></p></div> <!--Me parece la forma más efectiva de dejar espacios, estoy abierto a feedback :3-->
+            <div>
+                We are always open to conversation, feel free to<a href="./contact-us.html"><strong>contact us</strong></a>if you have any doubts, feedback, or want to collaborate with us.
+            </div>
+        </div>
+    </div>
+    <footer>
+        <a href="#header">Back to top</a>
+        <a href="./../html/our-policy.html">Our Policy</a>
+        <a href="./../html/our-policy.html">Disclaimer</a>
+        <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
+    </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
