--- a/html/disclaimer.html
+++ b/html/disclaimer.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--header: logo, navbar y menú desplegable-->
-    <header>
+    <header id="header">
         <div class="logo">
             <!-- Logo en el medio -->
             <img src="./../img/logo-limpio.png" alt="Logo">
@@ -40,10 +40,10 @@
                     <a class="nav-link" href="./share-your-blog.html">Share Your Blogs</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contact-us.html">Contact Us</a>
+                    <a class="nav-link" href="./learn.html">Learn The Basics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./disclaimer.html">Disclaimer</a>
+                    <a class="nav-link" href="./contact-us.html">Contact Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./our-policy.html">Our Policy</a>
@@ -52,12 +52,11 @@
               </div>
             </div>
             <!--menú desplegable, accordion sacado de bootstrap, no se me ocurrió otro modo para que esté en la misma línea del navbar que poniéndolo dentro del mismo, con grid no me funcionó y no se me ocurrió otra manera de hacer un menú desplegable usando únicamente html y css-->
-            <!--No es necesario, pero me parece que sería mejor que los accordions estén en alineados horizontalmente en vez de verticalmente-->
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      Trading books
+                      Extra help!
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -67,35 +66,14 @@
                     </div>
                   </div>
                 </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      Trading chanels
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <!--Dejo el lorem como ejemplo mientras encuentro links buenos-->
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolorum, assumenda aliquam fugiat fuga illo, facilis aspernatur iure eius id optio quibusdam dolores tenetur ullam, ducimus modi libero laboriosam dolor!</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Trading podcasts
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <!--Dejo el lorem como ejemplo mientras encuentro links buenos-->
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolorum, assumenda aliquam fugiat fuga illo, facilis aspernatur iure eius id optio quibusdam dolores tenetur ullam, ducimus modi libero laboriosam dolor!</p>
-                    </div>
-                  </div>
-                </div>
             </div>
         </nav>
     </header>
+    <footer>
+        <a href="#header">Back to top</a>
+        <a href="./../html/our-policy.html">Our Policy</a>
+        <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
+    </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
