añadiendo los otros archivos al branch para hacer el comit correctamente

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -84,7 +84,7 @@
     <footer>
         <a href="#header">Back to top</a>
         <a href="./../html/our-policy.html">Our Policy</a>
-        <a href="./../html/our-policy.html">Disclaimer</a>
+        <a href="./../html/disclaimer.html">Disclaimer</a>
         <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
     </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
