Guardando de nuevo, no está actualizando share-your-blog

--- a/html/share-your-blog.html
+++ b/html/share-your-blog.html
@@ -69,6 +69,26 @@
             </div>
         </nav>
     </header>
+    <!--Usando grid para separar los textos, no se me ocurrió dónde más aplicarlo para tener flexbox grid y bootstrap en el archivo-->
+    <!--usaré textos genéricos para representar cómo se vería-->
+    <div class="grid-container">
+      <div class="grid-item">
+        <h2 class="subtitulo">Título 1</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste quisquam, nam rem ex nihil minima saepe neque ea eveniet error iusto illo? Tempora minus doloribus mollitia, ipsam soluta aliquid in?</p>
+      </div>
+      <div class="grid-item">
+        <h2 class="subtitulo">Título 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, nihil? A perspiciatis architecto ipsam quod itaque reprehenderit, id nostrum, possimus iste recusandae voluptatum fugit quidem sed esse officia reiciendis dicta!</p>
+      </div>
+      <div class="grid-item">
+        <h2 class="subtitulo">Título 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, beatae incidunt maiores ab nam, nemo quasi nisi saepe iste quas aut voluptatum hic eaque eum harum explicabo cum corporis suscipit.</p>
+      </div>
+      <div class="grid-item">
+        <h2 class="subtitulo">Título 4</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit eligendi error maiores cumque accusamus iste sed iusto ducimus tempore nulla explicabo modi, architecto omnis nisi natus repellat consectetur inventore esse.</p>
+      </div>
+    </div>
     <footer>
         <a href="#header">Back to top</a>
         <a href="./../html/our-policy.html">Our Policy</a>
