Terminé el disclaimer y corregí errores relacionados a la falta de títulos de los archivos, además de completar el archivo contact-us

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -69,6 +69,7 @@
             </div>
         </nav>
     </header>
+    <h2 class="subtitulo">About Us</h2>
     <div class="row">
         <div class="col">
             Welcome to our trading community, where learning is free, and sharing is empowering. Our platform is dedicated to providing a space for individuals to freely exchange trades, analyses, blogs, podcasts, and channels. In the challenging world of trading, we understand the difficulties—both emotional and technical—faced by enthusiasts and professionals alike. Our mission is to create a supportive environment where members can collaborate, learn, and protect themselves from potential scams. We believe in the power of collective wisdom, and our platform is designed to facilitate the sharing of knowledge to help each other grow. Join us on this journey, as we strive to make the trading profession more accessible, transparent, and secure for everyone.
