--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -69,6 +69,24 @@
             </div>
         </nav>
     </header>
+    <h2 class="subtitulo">Contact Us</h2>
+    <!--Formulario, con uso de bootstrap-->
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Name</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Pepito Pérez">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Contact us below, we'll respond as soon as possible back to your email</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Write here"></textarea>
+    </div>
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="By submitting this I acknowledge the Community Guidelines and Disclaimer" aria-label="Recipient's username" aria-describedby="button-addon2">
+      <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
+    </div>
     <footer>
         <a href="#header">Back to top</a>
         <a href="./../html/our-policy.html">Our Policy</a>
