--- a/html/disclaimer.html
+++ b/html/disclaimer.html
@@ -69,6 +69,35 @@
             </div>
         </nav>
     </header>
+    <h2 class="subtitulo">This disclaimer applies to the use of our website and any information, content, services, or products provided on My Trading Path.</h2>
+    <p></p>
+    <div class="row">
+      <div class="col">
+          <h3 class="subtitulo2">Use of Information</h3>
+          Avoid sharing personal information about yourself or others without explicit consent.
+      </div>
+      <div class="col">
+        <h3 class="subtitulo2">Financial Risk</h3>
+          Trading in financial markets involves significant risks. Users should be aware of the possibility of substantial losses when engaging in financial transactions. My Trading Path assumes no responsibility for any direct or indirect loss or damage resulting from the use of the provided information.
+      </div>
+      <div class="col">
+        <h3 class="subtitulo2">Personal Decisions</h3>
+          All trading and financial decisions are the sole responsibility of the user. My Trading Path is not responsible for individual user decisions or the consequences that may arise from such decisions.
+      </div>
+      <div class="col">
+        <h3 class="subtitulo2">No Guarantees</h3>
+          My Trading Path does not guarantee the accuracy, completeness, or timeliness of the information provided on the website. Information is subject to change without notice.
+      </div>
+      <div class="col">
+        <h3 class="subtitulo2">External Links</h3>
+          This site may contain links to third-party websites. My Trading Path does not endorse or take responsibility for the content, privacy policies, or practices of those sites.
+      </div>
+    </div>
+    <div>
+      <p>
+        By accessing and using this site, you agree to this disclaimer. We recommend seeking independent financial and legal advice before making decisions based on the information provided by My Trading Path.
+      </p>
+    </div>
     <footer>
         <a href="#header">Back to top</a>
         <a href="./../html/our-policy.html">Our Policy</a>
