--- a/html/our-policy.html
+++ b/html/our-policy.html
@@ -69,6 +69,7 @@
             </div>
         </nav>
     </header>
+    <h2 class="subtitulo">Community Guidelines</h2>
     <div class="row">
         <div class="col">
             <h3 class="subtitulo2">Be Respectful to Others</h3>
@@ -136,7 +137,7 @@
     </div>
     <footer>
         <a href="#header">Back to top</a>
-        <a href="./../html/disclaimer.html">Disclaimer</a>
+        <a href="./../html/our-policy.html">Disclaimer</a>
         <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
     </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
