--- a/html/share-your-blog.html
+++ b/html/share-your-blog.html
@@ -71,6 +71,7 @@
     </header>
     <!--Usando grid para separar los textos, no se me ocurrió dónde más aplicarlo para tener flexbox grid y bootstrap en el archivo-->
     <!--usaré textos genéricos para representar cómo se vería-->
+    <h2 class="subtitulo">Post Your Blogs</h2>
     <div class="grid-container">
       <div class="grid-item">
         <h2 class="subtitulo">Título 1</h2>
