--- a/index/index.html
+++ b/index/index.html
@@ -72,6 +72,7 @@
             </div>
         </nav>
     </header>
+    <h2 class="subtitulo">Menu</h2>
     <div class="row">
         <div class="col">
             Trading is hard. The theory can be ambiguous, not all sources of knowledge might work, not only because of the people trying to purposely deceive us or scam us (which can be hard to spot), there is also people who thinks what they are teaching is right while it's not (and that's even harder to spot if you are unlucky enough to find the wrong sources to learn), and there is another group in the middle; the ones who teach you just enough so you know you are still missing something, so they can keep teaching you, of course, with a price. And that's not it! Even when if you know all what you need to be able to trade, there is yet a harder part, the emotional one.
