--- a/html/our-policy.html
+++ b/html/our-policy.html
@@ -137,7 +137,7 @@
     </div>
     <footer>
         <a href="#header">Back to top</a>
-        <a href="./../html/our-policy.html">Disclaimer</a>
+        <a href="./html/our-policy.html">Disclaimer</a>
         <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
     </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
