--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My trading path</title>
-    <!--link con css-->
-    <link rel="stylesheet" href="./../css/styles.css">
     <!--link de bootstrap al fondo de head para que funcione bien-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+    <!--link con css-->
+    <link rel="stylesheet" href="./css/styles.css">
+  </head>
 <body>
     <!--header: logo, navbar y menú desplegable-->
     <header>
         <div class="logo">
             <!-- Logo en el medio -->
-            <img src="./../img/logo-limpio.png" alt="Logo">
+            <img src="./img/logo-limpio.png" alt="Logo">
         </div>
         <!--Nombre de la página-->
         <div class="logo-nombre">
@@ -31,25 +31,25 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./../html/about-us.html">About Us</a>
+                    <a class="nav-link active" aria-current="page" href="./html/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/share-your-trades.html">Share Your Trades</a>
+                    <a class="nav-link" href="./html/share-your-trades.html">Share Your Trades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/share-your-blog.html">Share Your Blogs</a>
+                    <a class="nav-link" href="./html/share-your-blog.html">Share Your Blogs</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/learn.html">Learn The Basics</a>
+                    <a class="nav-link" href="./html/learn.html">Learn The Basics</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/contact-us.html">Contact Us</a>
+                    <a class="nav-link" href="./html/contact-us.html">Contact Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/disclaimer.html">Disclaimer</a>
+                    <a class="nav-link" href="./html/disclaimer.html">Disclaimer</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./../html/our-policy.html">Our Policy</a>
+                    <a class="nav-link" href="./html/our-policy.html">Our Policy</a>
                   </li>
                 </ul>
               </div>
@@ -88,8 +88,8 @@
     </div>
     <footer>
         <a href="#header">Back to top</a>
-        <a href="./../html/our-policy.html">Our Policy</a>
-        <a href="./../html/disclaimer.html">Disclaimer</a>
+        <a href="./html/our-policy.html">Our Policy</a>
+        <a href="./html/disclaimer.html">Disclaimer</a>
         <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
     </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
