corregí los enlaces del footer

--- a/html/share-your-trades.html
+++ b/html/share-your-trades.html
@@ -82,8 +82,8 @@
     </div>
     <footer>
         <a href="#header">Back to top</a>
-        <a href="./html/our-policy.html">Our Policy</a>
-        <a href="./html/disclaimer.html">Disclaimer</a>
+        <a href="./our-policy.html">Our Policy</a>
+        <a href="./disclaimer.html">Disclaimer</a>
         <a href="">Follow Us!</a> <!--No pongo link porque no tengo-->
     </footer>
     <!--link de bootstrap al fondo de body para que funcione bien-->
