--- a/html/learn.html
+++ b/html/learn.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My trading path</title>
-    <!--link con css-->
-    <link rel="stylesheet" href="./../css/styles.css">
     <!--link de bootstrap al fondo de head para que funcione bien-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+    <!--link con css-->
+    <link rel="stylesheet" href="./../css/styles.css">
+  </head>
 <body>
     <!--header: logo, navbar y menú desplegable-->
     <header id="header">
@@ -52,7 +52,7 @@
               </div>
             </div>
             <!--menú desplegable, accordion sacado de bootstrap, no se me ocurrió otro modo para que esté en la misma línea del navbar que poniéndolo dentro del mismo, con grid no me funcionó y no se me ocurrió otra manera de hacer un menú desplegable usando únicamente html y css-->
-            <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion accordion-flush bg-body-tertiary" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
